# binsearch

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  dockerbuild.sh  go.mod  go.sum
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: check.yaml  check.yml  codeql.yml
c/: .gitignore  CMakeLists.txt  Makefile
c/doc/: Doxyfile
c/resources/debian/: changelog  control  copyright  rules
c/resources/rpm/: rpm.spec
c/src/: CMakeLists.txt  binsearch.c  binsearch.h
c/src/binsearch/: CMakeLists.txt  binsearch.h
c/test/: CMakeLists.txt  test_binsearch.c  test_binsearch_col.c  test_binsearch_file.c
c/test/bench/: CMakeLists.txt  bench.c
c/test/data/: test_data.binsrc
cgo/: Makefile
cgo/src/: binsearch.go  binsearch_test.go
conda/: meta.yaml  setup-conda.sh
conda/python/: meta.yaml
doc/: Doxyfile
go/: .golangci.yml  Makefile
go/src/: binsearch.go  binsearch_col_test.go  binsearch_test.go  main_test.go
python/: .gitignore  MANIFEST.in  Makefile  README.md  setup.py
python/binsearch/: pybinsearch.c  pybinsearch.h
python/c/src/binsearch/: binsearch.h
python/src/: pybinsearch.c  pybinsearch.h
python/test/: test_binsearch.py  test_binsearch_col.py  test_binsearch_file.py
python/tests/: test_binsearch.py
resources/docker/: Dockerfile.dev
src/: CMakeLists.txt  binsearch.c  binsearch.h
test/: CMakeLists.txt  test_binsearch.c
test/data/: test_data_b.hex
